完成登陆服务的连接

--- a/module_shop_mall/src/main/AndroidManifest.xml
+++ b/module_shop_mall/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".activity.MvcTestActivity" />
         <activity android:name=".activity.MvpTestActivity"></activity>
         <activity android:name=".activity.MvpNoModelTestActivity"></activity>
+        <activity android:name=".activity.LoginActivity"/>
     </application>
 
 </manifest>
