--- a/module_shop_mall/src/main/module/AndroidManifest.xml
+++ b/module_shop_mall/src/main/module/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity android:name=".activity.ArticleDetailActivity" />
         <activity android:name=".activity.KnowledgeDetailActivity" />
         <activity android:name=".activity.MvcTestActivity" />
-        <activity android:name=".activity.MvpTestActivity"></activity>
+        <activity android:name=".activity.LoginActivity"/>
 
     </application>
 
