--- a/module_shop_mall/src/main/AndroidManifest.xml
+++ b/module_shop_mall/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".activity.MvpTestActivity"></activity>
         <activity android:name=".activity.MvpNoModelTestActivity"></activity>
         <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.MyCenterSetting"/>
     </application>
 
 </manifest>
