--- a/module_shop_mall/src/main/AndroidManifest.xml
+++ b/module_shop_mall/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity android:name=".activity.MvpNoModelTestActivity"></activity>
         <activity android:name=".activity.LoginActivity"/>
         <activity android:name=".activity.MyCenterSetting"/>
+        <activity android:name=".activity.PublishiGoodsActivity"/>
+
     </application>
 
 </manifest>
