--- a/module_shop_mall/src/main/AndroidManifest.xml
+++ b/module_shop_mall/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         <activity android:name=".activity.LoginActivity"/>
         <activity android:name=".activity.MyCenterSetting"/>
         <activity android:name=".activity.PublishiGoodsActivity"/>
+        <activity android:name=".activity.UserHomeActivity"/>
+        <activity android:name=".activity.RegisterActivity"/>
+        <activity android:name=".activity.UserInformationActivity"/>
+
 
     </application>
 
