添加个人购物数据信息

--- a/module_shop_mall/src/main/AndroidManifest.xml
+++ b/module_shop_mall/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".activity.RegisterActivity"/>
         <activity android:name=".activity.UserInformationActivity"/>
         <activity android:name=".activity.ClipImageActivity"/>
+        <activity android:name=".activity.MyGoodsPublshActivity"/>
 
 
     </application>
