--- a/module_shop_mall/build.gradle
+++ b/module_shop_mall/build.gradle
@@ -81,4 +81,7 @@ dependencies {
 
     //公用依赖包
     implementation project(':projectCore')
+
+    //Glide框架
+    compile 'com.github.bumptech.glide:glide:4.0.0'
 }
