--- a/module_shop_mall/src/main/AndroidManifest.xml
+++ b/module_shop_mall/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         <activity android:name=".activity.UserInformationActivity"/>
         <activity android:name=".activity.ClipImageActivity"/>
         <activity android:name=".activity.MyGoodsPublshActivity"/>
+        <activity android:name=".activity.GoodsClassifyActivity"/>
+        <activity android:name=".activity.StudentAuthenticationActivity"/>
 
 
     </application>
