修改一些bug，添加卖出买到页面

--- a/module_shop_mall/src/main/AndroidManifest.xml
+++ b/module_shop_mall/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity android:name=".activity.MyGoodsPublshActivity"/>
         <activity android:name=".activity.GoodsClassifyActivity"/>
         <activity android:name=".activity.StudentAuthenticationActivity"/>
+        <activity android:name=".activity.MyGoodsBuyActivity"/>
+        <activity android:name=".activity.MyGoodsSellActivity"/>
 
 
     </application>
