整合Mqtt，Android端建立service长连接

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ allprojects {
         mavenCentral()
         maven { url "https://clojars.org/repo/" } //icepick配置
         maven { url "https://jitpack.io" }
+        maven { url "https://repo.eclipse.org/content/repositories/paho-releases/" }
     }
 }
 
