--- a/module_shop_mall/build.gradle
+++ b/module_shop_mall/build.gradle
@@ -84,4 +84,7 @@ dependencies {
 
     //Glide框架
     compile 'com.github.bumptech.glide:glide:4.0.0'
+
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
+    compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 }
