--- a/module_shop_mall/src/main/AndroidManifest.xml
+++ b/module_shop_mall/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.tome.module_shop_mall">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -9,6 +10,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"
+        tools:ignore="ProtectedPermissions" />
     <application
         android:allowBackup="true"
         android:supportsRtl="true"
@@ -45,6 +48,7 @@
         <activity android:name=".activity.RulesUserActivity" />
         <activity android:name=".activity.AboutActivity" />
         <activity android:name=".activity.MyAddressActivity" />
+        <activity android:name=".activity.MyGoodShopCarlActivity" />
 
         <service android:name="org.eclipse.paho.android.service.MqttService" />
 
